--- a/frontend/src/css/app.css
+++ b/frontend/src/css/app.css
@@ -16,10 +16,10 @@
     --box-shadow-invalid: 3px 3px 0 1px var(--error-color);
 
     /* sizes */
-    --total-selector-height: 23vh;
-    --selector-padding-top: 5vh;
+    --total-selector-height: 23dvh;
+    --selector-padding-top: 3rem;
     --selector-margin-bottom: 3rem;
-    --actual-selector-height: calc(var(--total-selector-height) - var(--selector-padding-top) - var(--selector-margin-bottom));
+    --actual-selector-height: 100px;
     --midpoint-selector-height: calc(var(--actual-selector-height) - var(--selector-padding-top));
     --burger-bar-size: 2px;
 }
